[package]
name = "rustbucket_os"
version = "0.0.1"
authors = ["Adam Gleave <adamg108@hotmail.co.uk>"]

[lib]
crate-type = ["staticlib"]
path = "kernel/lib.rs"

[dependencies]
rlibc = "1.0"
multiboot2 = { git = "https://github.com/Adam-Gleave/multiboot2-rs" }
bitflags = "1.0.4"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[profile.dev]
debug = true
